# appaloft

./: .dockerignore  .editorconfig  .env.develop  .env.example  .env.test.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  TRADEMARKS.md  appaloft.console-preview.yml  appaloft.docs.yml  biome.jsonc  docker-compose.dev.yml  docker-compose.selfhost.yml  install.sh  package.json  skills-lock.json  tsconfig.base.json  tsconfig.json  turbo.json
.codex/environments/: environment.toml
.github/: .release-please-manifest.json  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: capacity-prune-e2e.yml  (+28 more)
.stitch/: DESIGN.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/frontend-dist/: index.html
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  BOOTSTRAP.md  BUSINESS_OPERATION_MAP.md  CORE_OPERATIONS.md  DESKTOP_PACKAGING_COMPARISON.md  DOMAIN_MODEL.md  ENVIRONMENTS.md  OPERATIONS.md  PLUGINS.md  PRODUCT_ROADMAP.md  PROVIDERS.md  RELEASE.md  RESOURCES.md  SECURITY.md  TENANT_SCOPE.md  TESTING.md
scripts/: check-ash-command-construction.ts  check-ci-test-boundaries.ts  check-query-batching.ts  export-deploy-action-wrapper.ts  run-appaloft-skill-model-evals.ts  sync-bun-version.ts  validate-appaloft-skill-evals.ts
(+1623 files in other folders)
