[package]
name = "appaloft-desktop"
version = "0.2.3"
description = "Appaloft Tauri desktop shell"
edition = "2021"

[lib]
name = "appaloft_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.5"
